Fixed width of the container on smaller devices

--- a/sass/main.css
+++ b/sass/main.css
@@ -141,6 +141,12 @@ ion-icon {
 }
 
 @media all and (max-width: 985px) {
+  .container-fluid {
+    padding-right: 0;
+    padding-left: 0;
+    margin-right: auto;
+    margin-left: auto;
+  }
   .contact-menu {
     display: flex;
     justify-content: center;
